# banchan

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  templates.py  util.py
app/repositories/: __init__.py
app/routers/: boards.py  threads.py
app/static/: style.css
app/templates/: base.html  board.html  catalog.html  index.html  thread.html
scripts/: docker-entrypoint.sh  init_db.py  seed.py
sql/: schema.sql
tests/: test_util.py
