[project]
name = "banchan"
version = "0.1.0"
description = "A small 4chan-style image/text board. FastAPI + Postgres + server-rendered templates."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pillow>=10.3",
    "itsdangerous>=2.1",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
